--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -1,21 +1,25 @@
-name: Deploy to Firebase Hosting
+name: Firebase Hosting
 
 on:
   push:
     branches:
-      - main  # Trigger deployment on push to 'main' branch
+      - main  # or your default branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Firebase CLI
+        run: npm install -g firebase-tools
+
+      - name: Authenticate with Firebase
         uses: wzieba/Firebase-Action@v2
         with:
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
+          firebase_token: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
 
       - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting
+        run: firebase deploy --only hosting --project ${{ secrets.FIREBASE_PROJECT_ID }}
